Create a fraction, mixed number, or integer input

--- a/index.html
+++ b/index.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fraction Calculator</title>
-    <link rel="stylesheet" href="./src/styles.css" />
+    <link rel="stylesheet" href="./src/styles.css">
   </head>
   <body>
     <h1>Fraction Calculator</h1>
-    <p id="tag-line">Most calculators think in decimals. This one thinks in fractions.</p>
-    <button id="test-btn">Click Me</button>
+    <p id="tag-line">Most calculators think in decimals. <br>This one thinks in fractions.</p>
+    <div id="input-form">
+      <div id="first-num">
+        <select name="first-kind" id="first-kind">
+          <option value="fraction" selected>Fraction</option>
+          <option value="mixed-number">Mixed Number</option>
+          <option value="integer">Integer</option>
+        </select>
+        <div id="first-input">
+          <input id="first-integer" class="number-input integer-input" type="number" inputmode="numeric" hidden>
+          <div id="first-fraction" class="fraction-input">
+            <input id="first-numerator" class="number-input" type="number" inputmode="numeric"><br>
+            <input id="first-denominator" class="number-input" type="number" inputmode="numeric">
+          </div>
+        </div>
+      </div>
+      <div id="second-num">
+
+      </div>
+      <button id="calculate-btn">Calculate</button>
+    </div>
     <script type="module" src="./src/main.ts"></script>
   </body>
 </html>
