Begin defining NumberInput class

--- a/index.html
+++ b/index.html
@@ -18,11 +18,30 @@
         </select>
         <div id="first-input" class="input-area">
           <div>
-            <input id="first-integer" class="number-input integer-input" type="number" inputmode="numeric" hidden>
+            <input 
+              id="first-integer"
+              class="number-input integer-input"
+              type="number"
+              min="1"
+              inputmode="numeric"
+              hidden
+            >
           </div>
           <div class="fraction-input">
-            <input id="first-numerator" class="number-input" type="number" inputmode="numeric"><br>
-            <input id="first-denominator" class="number-input" type="number" inputmode="numeric">
+            <input 
+              id="first-numerator"
+              class="number-input"
+              type="number"
+              min="1"
+              inputmode="numeric"
+            ><br>
+            <input 
+              id="first-denominator"
+              class="number-input"
+              type="number"
+              min="1"
+              inputmode="numeric"
+            >
           </div>
         </div>
       </div>
@@ -34,11 +53,30 @@
         </select>
         <div id="second-input" class="input-area">
           <div>
-            <input id="second-integer" class="number-input integer-input" type="number" inputmode="numeric" hidden>
+            <input 
+              id="second-integer"
+              class="number-input integer-input"
+              type="number"
+              min="1"
+              inputmode="numeric"
+              hidden
+            >
           </div>
           <div class="fraction-input">
-            <input id="second-numerator" class="number-input" type="number" inputmode="numeric"><br>
-            <input id="second-denominator" class="number-input" type="number" inputmode="numeric">
+            <input 
+              id="second-numerator"
+              class="number-input"
+              type="number"
+              min="1"
+              inputmode="numeric"
+            ><br>
+            <input 
+              id="second-denominator"
+              class="number-input"
+              type="number"
+              min="1"
+              inputmode="numeric"
+            >
           </div>
         </div>
       </div>
