--- a/index.html
+++ b/index.html
@@ -10,20 +10,17 @@
     <h1>Fraction Calculator</h1>
     <p id="tag-line">Most calculators think in decimals. <br>This one thinks in fractions.</p>
     <div id="input-form">
-      <div id="first-num" class="input-area">
-        <select name="first-kind" id="first-kind">
-          <option value="fraction" selected>Fraction</option>
-          <option value="mixed-number">Mixed Number</option>
-          <option value="integer">Integer</option>
-        </select>
-        <div id="first-input" class="input-area">
+      <div class="number-area">
+        <div class="input-area">
           <div>
             <input 
               id="first-integer"
-              class="number-input integer-input"
+              class="number-input"
               type="number"
-              min="1"
+              value="0"
+              min="0"
               inputmode="numeric"
+              onclick="this.select()"
               hidden
             >
           </div>
@@ -32,33 +29,53 @@
               id="first-numerator"
               class="number-input"
               type="number"
-              min="1"
+              value="0"
+              min="0"
               inputmode="numeric"
+              onclick="this.select()"
             ><br>
             <input 
               id="first-denominator"
               class="number-input"
               type="number"
+              value="1"
               min="1"
               inputmode="numeric"
+              onclick="this.select()"
             >
           </div>
         </div>
+        <div class="number-options">
+          <select name="first-sign" id="first-sign">
+            <option selected>Positive</option>
+            <option>Negative</option>
+          </select>
+          <select name="first-kind" id="first-kind">
+            <option value="fraction" selected>Fraction</option>
+            <option value="mixed-number">Mixed Number</option>
+            <option value="integer">Integer</option>
+          </select>
+        </div>
       </div>
-      <div id="second-num" class="input-area">
-        <select name="second-kind" id="second-kind">
-          <option value="fraction" selected>Fraction</option>
-          <option value="mixed-number">Mixed Number</option>
-          <option value="integer">Integer</option>
+      <div id="operator-div">
+        <select id="operator">
+          <option selected>+</option>
+          <option>-</option>
+          <option>✕</option>
+          <option>÷</option>
         </select>
-        <div id="second-input" class="input-area">
+      </div>
+      <div class="number-area">
+        <div class="input-area">
           <div>
             <input 
               id="second-integer"
-              class="number-input integer-input"
+              class="number-input"
               type="number"
-              min="1"
+              value="0"
+              min="0"
               inputmode="numeric"
+              onclick="this.select()"
               hidden
             >
           </div>
@@ -67,19 +84,36 @@
               id="second-numerator"
               class="number-input"
               type="number"
-              min="1"
+              value="0"
+              min="0"
               inputmode="numeric"
+              onclick="this.select()"
             ><br>
             <input 
               id="second-denominator"
               class="number-input"
               type="number"
+              value="1"
               min="1"
               inputmode="numeric"
+              onclick="this.select()"
             >
           </div>
         </div>
+        <div class="number-options">
+          <select name="second-sign" id="second-sign">
+            <option selected>Positive</option>
+            <option>Negative</option>
+          </select>
+          <select name="second-kind" id="second-kind">
+            <option value="fraction" selected>Fraction</option>
+            <option value="mixed-number">Mixed Number</option>
+            <option value="integer">Integer</option>
+          </select>
+        </div>
       </div>
+    </div>
+    <div id="calculate-div">
       <button id="calculate-btn">Calculate</button>
     </div>
     <script type="module" src="./src/main.ts"></script>
