Add a dedicated selection for positive or negative

--- a/index.html
+++ b/index.html
@@ -7,115 +7,121 @@
     <link rel="stylesheet" href="./src/styles.css">
   </head>
   <body>
-    <h1>Fraction Calculator</h1>
-    <p id="tag-line">Most calculators think in decimals. <br>This one thinks in fractions.</p>
-    <div id="input-form">
-      <div class="number-area">
-        <div class="input-area">
-          <div>
-            <input 
-              id="first-integer"
-              class="number-input"
-              type="number"
-              value="0"
-              min="0"
-              inputmode="numeric"
-              onclick="this.select()"
-              hidden
-            >
+    <header>
+      <h1>Fraction Calculator</h1>
+      <p id="tag-line">Most calculators think in decimals. <br>This one thinks in fractions.</p>
+    </header>
+    <main>
+      <div id="input-form">
+        <div class="number-area">
+          <div class="input-area">
+            <p id="first-negative" class="negative-sign" hidden>—</p>
+            <div>
+              <input 
+                id="first-integer"
+                class="number-input"
+                type="number"
+                value="0"
+                min="0"
+                inputmode="numeric"
+                onclick="this.select()"
+                hidden
+              >
+            </div>
+            <div class="fraction-input">
+              <input 
+                id="first-numerator"
+                class="number-input"
+                type="number"
+                value="0"
+                min="0"
+                inputmode="numeric"
+                onclick="this.select()"
+              ><br><hr>
+              <input 
+                id="first-denominator"
+                class="number-input"
+                type="number"
+                value="1"
+                min="1"
+                inputmode="numeric"
+                onclick="this.select()"
+              >
+            </div>
           </div>
-          <div class="fraction-input">
-            <input 
-              id="first-numerator"
-              class="number-input"
-              type="number"
-              value="0"
-              min="0"
-              inputmode="numeric"
-              onclick="this.select()"
-            ><br>
-            <input 
-              id="first-denominator"
-              class="number-input"
-              type="number"
-              value="1"
-              min="1"
-              inputmode="numeric"
-              onclick="this.select()"
-            >
+          <div class="number-options">
+            <select name="first-sign" id="first-sign">
+              <option selected>Positive</option>
+              <option>Negative</option>
+            </select>
+            <select name="first-kind" id="first-kind">
+              <option selected>Fraction</option>
+              <option>Mixed Number</option>
+              <option>Integer</option>
+            </select>
           </div>
         </div>
-        <div class="number-options">
-          <select name="first-sign" id="first-sign">
-            <option selected>Positive</option>
-            <option>Negative</option>
+        <div id="operator-div">
+          <select id="operator">
+            <option selected>+</option>
+            <option>-</option>
+            <option>✕</option>
+            <option>÷</option>
           </select>
-          <select name="first-kind" id="first-kind">
-            <option value="fraction" selected>Fraction</option>
-            <option value="mixed-number">Mixed Number</option>
-            <option value="integer">Integer</option>
-          </select>
+        </div>
+        <div class="number-area">
+          <div class="input-area">
+            <p id="second-negative" class="negative-sign" hidden>—</p>
+            <div>
+              <input 
+                id="second-integer"
+                class="number-input"
+                type="number"
+                value="0"
+                min="0"
+                inputmode="numeric"
+                onclick="this.select()"
+                hidden
+              >
+            </div>
+            <div class="fraction-input">
+              <input 
+                id="second-numerator"
+                class="number-input"
+                type="number"
+                value="0"
+                min="0"
+                inputmode="numeric"
+                onclick="this.select()"
+              ><br><hr>
+              <input 
+                id="second-denominator"
+                class="number-input"
+                type="number"
+                value="1"
+                min="1"
+                inputmode="numeric"
+                onclick="this.select()"
+              >
+            </div>
+          </div>
+          <div class="number-options">
+            <select name="second-sign" id="second-sign">
+              <option selected>Positive</option>
+              <option>Negative</option>
+            </select>
+            <select name="second-kind" id="second-kind">
+              <option selected>Fraction</option>
+              <option>Mixed Number</option>
+              <option>Integer</option>
+            </select>
+          </div>
         </div>
       </div>
-      <div id="operator-div">
-        <select id="operator">
-          <option selected>+</option>
-          <option>-</option>
-          <option>✕</option>
-          <option>÷</option>
-        </select>
+      <div id="calculate-div">
+        <button id="calculate-btn">Calculate</button>
       </div>
-      <div class="number-area">
-        <div class="input-area">
-          <div>
-            <input 
-              id="second-integer"
-              class="number-input"
-              type="number"
-              value="0"
-              min="0"
-              inputmode="numeric"
-              onclick="this.select()"
-              hidden
-            >
-          </div>
-          <div class="fraction-input">
-            <input 
-              id="second-numerator"
-              class="number-input"
-              type="number"
-              value="0"
-              min="0"
-              inputmode="numeric"
-              onclick="this.select()"
-            ><br>
-            <input 
-              id="second-denominator"
-              class="number-input"
-              type="number"
-              value="1"
-              min="1"
-              inputmode="numeric"
-              onclick="this.select()"
-            >
-          </div>
-        </div>
-        <div class="number-options">
-          <select name="second-sign" id="second-sign">
-            <option selected>Positive</option>
-            <option>Negative</option>
-          </select>
-          <select name="second-kind" id="second-kind">
-            <option value="fraction" selected>Fraction</option>
-            <option value="mixed-number">Mixed Number</option>
-            <option value="integer">Integer</option>
-          </select>
-        </div>
-      </div>
-    </div>
-    <div id="calculate-div">
-      <button id="calculate-btn">Calculate</button>
-    </div>
+    </main>
     <script type="module" src="./src/main.ts"></script>
   </body>
 </html>
