Split utility functions into Utils class

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <select name="result-kind-select" id="result-kind-select">
           <option selected>Mixed Number</option>
           <option>Improper Fraction</option>
-          <option>Decimal</option>
+          <option>Decimal (Rounded)</option>
         </select>
         <button id="calculate-btn">Calculate</button>
       </div>
