Position the negative signs more naturally

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <div id="input-form">
         <div class="number-area">
           <div class="input-area">
-            <p id="first-negative" class="negative-sign" hidden>—</p>
-            <div>
+            <div class="sign-and-int">
+              <p id="first-negative" class="negative-sign" hidden>—</p>
               <label for="first-integer" class="hidden-label">Integer part:</label>
               <input 
                 id="first-integer"
@@ -83,8 +83,8 @@
         </div>
         <div class="number-area">
           <div class="input-area">
-            <p id="second-negative" class="negative-sign" hidden>—</p>
-            <div>
+            <div class="sign-and-int">
+              <p id="second-negative" class="negative-sign" hidden>—</p>
               <label for="second-integer" class="hidden-label">Integer part:</label>
               <input 
                 id="second-integer"
